Fixed slider bubble spacing

--- a/project/static/styles/main.css
+++ b/project/static/styles/main.css
@@ -187,8 +187,15 @@ h4
     position: relative;
     width: 85%;
     height: 100%;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: .5em;
     /*display: inline-block;*/
+}
+
+.range-label {
+    text-align: center;
+    display: inline-block;
 }
 
 .bubble {
@@ -198,6 +205,7 @@ h4
   position: absolute;
   border-radius: 4px;
   left: 50%;
+  top: 100%;
   transform: translateX(-50%);
 }
 .bubble::after {
